Minor: add quizzes icon function and add-quiz-icon complete
